RESOLVED FIXED164230
LayoutTests/fast/frames/invalid-frameset.html is not clean by the end of FrameView::layout().
https://bugs.webkit.org/show_bug.cgi?id=164230
Summary LayoutTests/fast/frames/invalid-frameset.html is not clean by the end of Fram...
alan
Reported 2016-10-31 10:49:19 PDT
All renderers in the render tree should be clean when we finished with FrameView::layout()
Attachments
Patch (1.75 KB, patch)
2016-10-31 10:59 PDT, alan
no flags
Patch (1.78 KB, patch)
2016-10-31 11:17 PDT, alan
no flags
alan
Comment 1 2016-10-31 10:59:18 PDT
Simon Fraser (smfr)
Comment 2 2016-10-31 11:01:14 PDT
Comment on attachment 293437 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=293437&action=review > Source/WebCore/ChangeLog:8 > + This patch clears the needs layout bit on the descendants of the invalid framesets too (and not only the invalid frameset). This could be clearer about "all descendants, not just children".
alan
Comment 3 2016-10-31 11:17:46 PDT
WebKit Commit Bot
Comment 4 2016-10-31 13:20:58 PDT
Comment on attachment 293441 [details] Patch Clearing flags on attachment: 293441 Committed r208172: <http://trac.webkit.org/changeset/208172>
WebKit Commit Bot
Comment 5 2016-10-31 13:21:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.