LayoutTests/fast/frames/invalid-frameset.html is not clean by the end of FrameView::layout(). https://bugs.webkit.org/show_bug.cgi?id=164230

Reviewed by Simon Fraser.

When a <frameset> has invalid children, in addition to clear the needs layout flag on the children
we also need to do clear the descendants too.

Covered by LayoutTests/fast/frames/invalid-frameset.html.

* rendering/RenderFrameSet.cpp:
(WebCore::RenderFrameSet::positionFrames):


Canonical link: https://commits.webkit.org/181949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208172 268f45cc-cd09-0410-ab3c-d52691b4dbfc